updated readme file and domains of the maps

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div>
         <nav>
-            <a href="./top-10-end-stations/topEnd.html">Top 10 end Stations</a>
-            <a href="./top-10-start-stations/topStart.html">Top 10 start Stations</a>
+            <a href="./heatmap-start-stations/topStart.html">Heatmap of the start Stations</a>
+            <a href="./heatmap-end-stations/topEnd.html">Heatmap of the end Stations</a>
             <a href="./top-10-used-routes/topUsed.html">Top 10 used Routes</a>
         </nav>
     </div>
