updated features in the maps and the footer

--- a/index.html
+++ b/index.html
@@ -51,10 +51,20 @@
             padding: 20px;
             text-align: center;
             margin-top: auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         footer p {
             margin: 0;
+        }
+
+        footer a {
+            color: #fff;
+            text-decoration: none;
+            margin: 10px;
+            font-size: 14px;
         }
     </style>
 </head>
@@ -66,11 +76,13 @@
         <a href="./heatmap-start-stations/topStart.html"><span>Heatmap of Start Stations</span></a>
         <a href="./heatmap-end-stations/topEnd.html"><span>Heatmap of End Stations</span></a>
         <a href="./top-10-used-routes/topUsed.html"><span>Top 10 Most Used Routes</span></a>
-        <a href="https://github.com/MaxLopezSalgado"><span>My GitHub</span></a>
-        <a href="https://www.linkedin.com/in/maximiliano-lopez-salgado/"><span>My LinkedIn</span></a>
     </nav>
     <footer>
         <p>A project dedicated to bike sharing geographical data analysis</p>
+        <div>
+            <a href="https://github.com/MaxLopezSalgado">My GitHub</a>
+            <a href="https://www.linkedin.com/in/maximiliano-lopez-salgado/">My LinkedIn</a>
+        </div>
     </footer>
 </body>
 </html>
